more dark mode fixes

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 @media (prefers-color-scheme: light) {
   :root {
     --color-background: #fff;
-    --color-text: #222;
+    --color-text: #444;
   }
 }
 
