--- a/src/components/landing-graphic/LandingGraphic.css
+++ b/src/components/landing-graphic/LandingGraphic.css
@@ -10,6 +10,10 @@
 .landingGraphic path.corner {
   stroke: var(--color-corner);
   opacity: 0.3;
+
+  @media (prefers-color-scheme: light) {
+    opacity: 0.9;
+  }
 }
 
 .measurement {
@@ -40,4 +44,8 @@
   user-select: none;
   -webkit-user-select: none;
   letter-spacing: 0.6em;
+
+  @media (prefers-color-scheme: light) {
+    opacity: 0.2;
+  }
 }
